
2008-01-25
Generates the following
	- private/public data members
	- blank constructors calls
	- sets attributes (only from the direct class, not inherited ones): 
			properies and fields.